--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "langchain": "^0.0.203",
-    "openai": "^4.20.1"
+    "openai": "^4.20.1",
+    "pdf-parse": "^1.1.1",
+    "youtube-transcript": "^1.0.6",
+    "youtubei.js": "^5.8.0"
   }
 }
