--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,14 @@
     "langchain": "^0.0.203",
     "openai": "^4.20.1",
     "pdf-parse": "^1.1.1",
+    "user-event": "^4.0.0",
     "youtube-transcript": "^1.0.6",
     "youtubei.js": "^5.8.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/register": "^7.22.15",
+    "jest": "^29.7.0"
   }
 }
